# openMMC_u4FCP

./: CMakeLists.txt
FreeRTOS/: CMakeLists.txt
FreeRTOS/portable/GCC/ARM_CM3/: port.c
FreeRTOS/trace/: CMakeLists.txt
modules/: CMakeLists.txt  adn4604.c  eeprom_24xx512.c  eeprom_24xx512.h  eeprom_24xx64.c  fru.c  ipmb.c  ipmi.c  led.c  main.c  printf-stdarg.c  sdr.c  task_priorities.h  tpl0102.c  tpl0102.h
modules/sensors/: CMakeLists.txt  hotswap.c  sensors.h  ucd90xxx.c  ucd90xxx.h
port/board/: CMakeLists.txt
port/board/u4fcp-v2/: CMakeLists.txt  board_config.c  board_config.h  default_0-Registers.h  default_1-Registers.h  i2c_mapping.c  i2c_mapping.h  ipmi_oem.c  ipmi_oem.h  payload.c  payload.h  pin_mapping.c  pin_mapping.h  sdr_list.c  user_amc_fru.h
port/board/ufc-common/: CMakeLists.txt  board_fru.c  board_ipmb.c  board_ipmb.h  board_led.c  board_led.h
port/ucontroller/: CMakeLists.txt
port/ucontroller/stm32/stm32f1xx/: CMakeLists.txt  FreeRTOSConfig.h  port.h  stm32_gpio.h  stm32_i2c.c  stm32_i2c.h  stm32_pincfg.c  stm32_pincfg.h  stm32_uart.c  stm32_uart.h  stm32_watchdog.h  stm32f10x.h  stm32f10x_it.c  stm32f1xx_it.c  system_stm32f10x.c  system_stm32f1xx.c
port/ucontroller/stm32/stm32f1xx/Libraries/STM32F10x_StdPeriph_Driver/inc/: stm32f10x_gpio.h
port/ucontroller/stm32/stm32f1xx/bootloader/: CMakeLists.txt  README.md
port/ucontroller/stm32/stm32f1xx/bootloader/Inc/: main.h  stm32f1xx_hal_conf.h
port/ucontroller/stm32/stm32f1xx/bootloader/Src/: main.c  stm32f1xx_hal_msp.c  system_stm32f10x.c
port/ucontroller/stm32/stm32f1xx/bootloader/Startup/: startup_stm32f10x_md.s
port/ucontroller/stm32/stm32f1xx/linker/: STM32F103C8T6_app.ld  STM32F103C8T6_boot.ld
toolchain/: toolchain-arm-none-eabi.cmake
